k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: retail-app
    labels:
      app.kubernetes.io/managed-by: terraform
      project: karatu-2025-capstone
      student_id: alt-soe-2025-350
